

public class Helper 
{
    public static string P_ANIM_MOVEMENT = "magnitude";
    public static string P_ANIM_DEAD = "isDead";
    public static string P_ANIM_WIN = "isWin";
    public static string P_ANIM_EQUIP = "equipGun";
    public static string P_ANIM_FIRE = "fire";

    public static int MAX_GEM_OBJECTS = 10;
    public static int MAX_ENEMY_OBJECTS = 5;
    public static int POINTS_TO_WIN = 5;

}